--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#056DBF</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="colorFont">#000000</color>
+    <color name="colorSplashBackground">#ffffff</color>
 </resources>
