--- a/app/src/main/res/layout/enc_dialog.xml
+++ b/app/src/main/res/layout/enc_dialog.xml
@@ -1,15 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent" android:layout_height="wrap_content">
+
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:hint="Password"
+        android:layout_margin="10dp">
 
     <EditText
         android:id="@+id/dialog_enc"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
         android:inputType="text"
-        android:hint="Password"
         android:textColor="@color/colorFont"
         android:fontFamily="monospace"
         android:textSize="18sp"/>
+    </com.google.android.material.textfield.TextInputLayout>
 </RelativeLayout>
